--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,24 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <script>
+      function hApiBack(){
+        const l=window.location;
+        const BaseURL='/' + l.pathname.split('/')[1];
+        const qValues=l.search.substring(1).split('=');
+        let tIndex;
+        qValues.forEach((w,i)=>{
+          if(w == 'origp'){
+            tIndex=i+1;
+          }
+        });
+        if(tIndex){
+          const url=BaseURL+qValues[tIndex];
+          window.history.replaceState(null,null,url);
+        }
+      }
+      hApiBack();
+    </script>
     <div id="root"></div>
     <!--
       This HTML file is a template.
