deploy: da67246c320efb57de89d363474df6873603fa75

--- a/apps.html
+++ b/apps.html
@@ -1,17 +1,4 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>FukukouSSJouhou</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <style>
-    * {
+<!doctype html><html><head><meta charset="utf-8"><title>FukukouSSJouhou</title><meta name="viewport" content="width=device-width,initial-scale=1"><style>* {
         margin: 0px;
         padding: 0px;
-    }
-    </style>
-  <script defer src="index.js"></script></head>
-  <body>
-    <div id="root"></div>
-  </body>
-</html>
+    }</style><script defer="defer" src="vendor.bundle.js"></script><script defer="defer" src="apps.bundle.js"></script></head><body><div id="root"></div></body></html>
