--- a/plamar.html
+++ b/plamar.html
@@ -1,4 +1,4 @@
 <!doctype html><html><head><meta charset="utf-8"><title>FukukouSSJouhou</title><meta name="viewport" content="width=device-width,initial-scale=1"><style>* {
         margin: 0px;
         padding: 0px;
-    }</style><script defer="defer" src="mui.bundle.js"></script><script defer="defer" src="react.bundle.js"></script><script defer="defer" src="vendor.bundle.js"></script><script defer="defer" src="plamar.bundle.js"></script></head><body><div id="root"></div></body></html>
+    }</style><script defer="defer" src="react.bundle.js"></script><script defer="defer" src="vendor.bundle.js"></script><script defer="defer" src="plamar.bundle.js"></script></head><body><div id="root"></div></body></html>
