--- a/public/webar/index.html
+++ b/public/webar/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <script type="module" src="model-viewer.min.js"></script>
 </head>
 <body>
     <style>
@@ -11,11 +12,10 @@
           height: 640px;
         }
       </style>
-    <script type="module" src="model-viewer.min.js"></script>
     <!-- Use it like any other HTML element -->
     <model-viewer width="500"
         alt="Neil Armstrong's Spacesuit from the Smithsonian Digitization Programs Office and National Air and Space Museum"
-        src="treeonly.glb" ar ar-modes="webxr scene-viewer quick-look"
+        src="./ume.glb" ios-src="./ume.usdz" ar ar-modes="scene-viewer webxr quick-look"
         seamless-poster shadow-intensity="1" camera-controls enable-pan></model-viewer>
 </body>
 
