--- a/webar/index.html
+++ b/webar/index.html
@@ -15,7 +15,7 @@
     <!-- Use it like any other HTML element -->
     <model-viewer width="500"
         alt="Neil Armstrong's Spacesuit from the Smithsonian Digitization Programs Office and National Air and Space Museum"
-        src="./ume.glb" ios-src="./ume.usdz" ar ar-modes="scene-viewer webxr quick-look"
+        src="./ume.glb" ios-src="./ume.usdz" ar ar-modes="webxr scene-viewer quick-look"
         seamless-poster shadow-intensity="1" camera-controls enable-pan></model-viewer>
 </body>
 
