--- a/200.html
+++ b/200.html
@@ -1,4 +1,4 @@
-<!doctype html><html><head><meta charset="utf-8"><title>FukukouSSJouhou</title><meta name="viewport" content="width=device-width,initial-scale=1"><style>* {
+<!doctype html><html lang="ja"><head><meta charset="utf-8"><title>FukukouSSJouhou</title><meta name="viewport" content="width=device-width,initial-scale=1"><style>* {
         margin: 0px;
         padding: 0px;
     }</style><script defer="defer" src="react.bundle.js"></script><script defer="defer" src="vendor.bundle.js"></script><script defer="defer" src="index.bundle.js"></script></head><body><div id="root"></div></body></html>
